Kubernetes task/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: juice
  labels:
    name: juice
spec:
  type: NodePort
  ports:
   - port: 80
     targetPort: 3000
  selector:
    name: juice
