Kubernetes task/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
spec:
  rules:
  - host: juice-shop.com
    http:
      paths:
      - path: /
        pathType: Prefix  
        backend:
          service:
            name: juice
            port: 
              number: 80
